fixed board image in waitroom overflowing on narrow screens

--- a/Src/BoardGames.AngularClient/src/app/alea-evangelii/ae-room-selector/ae-room-selector.component.scss
+++ b/Src/BoardGames.AngularClient/src/app/alea-evangelii/ae-room-selector/ae-room-selector.component.scss
@@ -7,4 +7,9 @@
     flex-direction: column;
     align-items: stretch;
     width: max-content;
+    max-width: 100%;
+}
+
+.join-btn {
+    flex-grow: 1;
 }
